# robodog_python

example/go2/research/: CMakeLists.txt  detect_qr.py  get_position.cpp  move_test.cpp  qr_detection_pose.py  qr_detection_standing.py  return_to_qr.cpp  return_to_qr_position.cpp  try_return.cpp
example/go2/research/actualDog/resources/: CMakeLists.txt  README .md  qr_poses.json  test.pcd
example/go2/research/actualDog/src/: automomous_navi_qr_code_detection.cpp  autonomous_nav_qr_detection_final.cpp  qr_detection_test_standing.cpp
example/go2/research/demos/: report_03_14_26.txt
example/go2/shamanth/: nav_test.py  qr_detector.py  waypoints.csv
wheels/: rich_click-1.9.5-py3-none-any.whl
